---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:5:19
  │
5 │     inst consumer(inst producer()#0)
  │                   ^^^^^^^^^^^^^^^ This has a field #1 that  is unused
  │
  = note: This has a field #1 that  is a &mut value which must be set


